# Agent-based-Digital-Twins-Tools

./: README.md
Agent-VC/: README.md
Agent-VC/opcua/: pom.xml
Agent-VC/visual_components/: Visual Coomponents 4.6.txt
MADTwin/: README.md
MADTwin/DigitalAgent/: APDescription.txt  MTPs-laptop-container.txt  build.gradle  settings.gradle
MADTwin/DigitalAgent/src/main/java/agent/: Initializer.java  LaptopAgent.java
MADTwin/DigitalAgent/src/main/java/helpers/: CSVFile.java  Delay.java  Movement.java  Point2D.java
MADTwin/DigitalAgent/src/main/java/mqtt/: TagIdMqtt.java  TagMqtt.java
MADTwin/DigitalAgent/src/main/java/objectcomparator/: Item.java  ItemComparator.java  test.java
MADTwin/DigitalAgent/src/main/java/playground/: Agent1.java  Agent2.java  Agent3.java  Agent4.java  (+7 more)
MADTwin/DigitalAgent/temp/: DualAgentCoordinates_PhysicalAgent_113_dual@Main-Platform.csv
MADTwin/layout/: config.ini  error.ui  mainwindow.ui  pyproject.toml  tagdialog.ui
MADTwin/layout/my-venv/: pyvenv.cfg
MADTwin/layout/my-venv/Scripts/: activate  activate.bat
MADTwin/layout/uwbmap/: __main__.py  config.ini  config.py
MADTwin/layout/uwbmap/agent/: __init__.py
MADTwin/layout/uwbmap/mainwindow/: __init__.py  agent_summary.py
MADTwin/layout/uwbmap/mainwindow/map/: __init__.py  robot.py  robot_dialog.py
MADTwin/layout/uwbmap/matplot/: plot.py
MADTwin/layout/uwbmap/mqttclient/: __init__.py
MADTwin/layout/uwbmap/pathsimilarity/: similarityresults.py
MADTwin/physical-layer/: build.gradle  config.gradle  settings.gradle
MADTwin/physical-layer/gradle/: deploy.gradle
(+17 files in other folders)
